--- a/src/angular/app/pages/login-win/login-win.component.html
+++ b/src/angular/app/pages/login-win/login-win.component.html
@@ -26,7 +26,7 @@
           </div>
           <div class="value">
             <d-form-control>
-              <input dTextInput autocomplete="off" name="userName" placeholder="请输入登录账号" [(ngModel)]="formData.userName" />
+              <input dTextInput autocomplete="off" name="userName" placeholder="请输入登录账号" [(ngModel)]="formData.account" />
             </d-form-control>
           </div>
         </div>
