--- a/src/angular/app/pages/index-win/index-win.component.scss
+++ b/src/angular/app/pages/index-win/index-win.component.scss
@@ -7,6 +7,11 @@
   &:first-child {
     margin-top: 0;
   }
+
+  .layout-wrapper-content {
+    height: calc(100vh - 80px);
+    overflow: auto;
+  }
 }
 
 d-header {
@@ -36,13 +41,11 @@ d-header {
 
 d-aside {
   height: calc(100vh);
-  width: 180px;
+  max-width: 240px;
   background-color: $devui-base-bg;
 }
 
 d-content {
-  line-height: 200px;
-  text-align: center;
   background-color: $devui-global-bg;
 }
 
