--- a/src/render/app/pages/index-win/index-win.component.scss
+++ b/src/render/app/pages/index-win/index-win.component.scss
@@ -38,8 +38,8 @@ d-content {
 }
 
 d-footer {
-  color: $devui-light-text;
-  background-color: $devui-base-bg-dark;
+  color: $devui-placeholder;
+  background-color: $devui-global-bg;
   padding: 8px 24px;
 
   display: flex;
