--- a/src/render/components/ne-header/ne-header.component.html
+++ b/src/render/components/ne-header/ne-header.component.html
@@ -1,7 +1,16 @@
 <div class="ne-header">
   <div class="tabs" id="ne-header-tabs">
-    <d-tabs [type]="'wrapped'" [size]="'md'" [scrollMode]="true" [closeable]="true" [(activeTab)]="wrappedActiveId">
-      <d-tab *ngFor="let item of menus" [id]="item.id" [title]="item.title"></d-tab>
+    <d-tabs
+      [type]="'wrapped'"
+      [size]="'md'"
+      [scrollMode]="true"
+      [closeable]="true"
+      [closeableIds]="deleteTabIds"
+      [activeTab]="tabActiveId"
+      (addOrDeleteTabChange)="deleteTab($event, 'wrapped')"
+      (activeTabChange)="activeTabChange($event)"
+    >
+      <d-tab *ngFor="let item of tabs" [id]="item.id" [title]="item.title"></d-tab>
     </d-tabs>
   </div>
   <div class="tools"></div>
