--- a/src/render/app/pages/index-win/index-win.component.scss
+++ b/src/render/app/pages/index-win/index-win.component.scss
@@ -19,7 +19,7 @@ d-header {
   height: 42px;
   background-color: $devui-base-bg;
   color: $devui-light-text;
-  border: 1px solid #eeeeee;
+  border: 1px solid $devui-line;
   border-left: 0;
 
   fa-icon {
