--- a/src/render/components/ne-header/ne-header.component.html
+++ b/src/render/components/ne-header/ne-header.component.html
@@ -13,5 +13,9 @@
       <d-tab *ngFor="let item of tabs" [id]="item.id" [title]="item.title"></d-tab>
     </d-tabs>
   </div>
-  <div class="tools"></div>
+  <div class="tools">
+    <div class="tools-item">
+      <app-ne-tools-theme></app-ne-tools-theme>
+    </div>
+  </div>
 </div>
