v20221107 -Tools: 图标+组件: user,star,setting

--- a/src/render/components/ne-header/ne-header.component.html
+++ b/src/render/components/ne-header/ne-header.component.html
@@ -14,8 +14,24 @@
     </d-tabs>
   </div>
   <div class="tools">
-    <div class="tools-item">
-      <app-ne-tools-theme></app-ne-tools-theme>
+    <div class="tools-left">
+      <div class="tools-item">
+        <app-ne-tools-theme></app-ne-tools-theme>
+      </div>
+      <div class="tools-item">
+        <app-ne-tools-setting></app-ne-tools-setting>
+      </div>
+      <div class="tools-item">
+        <app-ne-tools-git></app-ne-tools-git>
+      </div>
+    </div>
+    <div class="tools-right">
+      <div class="tools-item">
+        <app-ne-tools-user></app-ne-tools-user>
+      </div>
+      <div class="tools-item">
+        <app-ne-tools-help></app-ne-tools-help>
+      </div>
     </div>
   </div>
 </div>
