--- a/src/render/components/ne-header/ne-header.component.scss
+++ b/src/render/components/ne-header/ne-header.component.scss
@@ -1,16 +1,26 @@
 .ne-header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   .tools {
-    width: 18vw;
+    width: 25%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
 
-    .tools-item {
-      padding: 0 8px;
+    .tools-left,
+    .tools-right {
+      display: flex;
+      align-items: center;
+      .tools-item {
+        padding: 0 8px;
+      }
+    }
+
+    .tools-right {
+      justify-content: flex-end;
     }
   }
 }
