v20221108 -Tools: 用户: 重新登录, 退出

--- a/src/render/components/ne-header/ne-tools-theme/ne-tools-theme.component.html
+++ b/src/render/components/ne-header/ne-tools-theme/ne-tools-theme.component.html
@@ -2,7 +2,7 @@
   <d-icon
     dPopover
     [controlled]="true"
-    [position]="'bottom-right'"
+    [position]="'bottom-left'"
     [content]="themeList"
     [icon]="'icon-color'"
     [operable]="true"
