--- a/src/render/components/ne-header/ne-tools-user/ne-tools-user.component.html
+++ b/src/render/components/ne-header/ne-tools-user/ne-tools-user.component.html
@@ -2,7 +2,7 @@
   <d-icon [icon]="'icon-op-member'" [operable]="true" dDropDownToggle></d-icon>
   <ul dDropDownMenu class="ne-tools-user-dropdown-menu" role="menu">
     <h1 class="title">用户设置</h1>
-    <li role="menuitem" class="item" dDropDownMenuItem (click)="onToggle('$event')">
+    <li role="menuitem" class="item" dDropDownMenuItem (click)="reLogin()">
       <d-icon [icon]="'icon-member'"></d-icon>
       <span class="text">重新登录</span>
     </li>
@@ -10,7 +10,7 @@
       <d-icon [icon]="'icon-lock-private'"></d-icon>
       <span class="text">修改密码</span>
     </li>
-    <li role="menuitem" class="item" dDropDownMenuItem>
+    <li role="menuitem" class="item" dDropDownMenuItem (click)="quitIndexWin()">
       <d-icon [icon]="'icon-remove'"></d-icon>
       <span class="text">退出</span>
     </li>
