--- a/src/render/styles.scss
+++ b/src/render/styles.scss
@@ -33,7 +33,7 @@
 
   .title {
     padding: 25px 15px 15px 15px;
-    color: $devui-disabled-text;
+    color: $devui-feedback-overlay-text;
     margin: 0;
   }
 
