v20221109 -Window: 系统设置主框体Setting

--- a/src/render/app/pages/index-win/index-win.component.html
+++ b/src/render/app/pages/index-win/index-win.component.html
@@ -10,24 +10,7 @@
       <router-outlet></router-outlet>
     </d-content>
     <d-footer>
-      <div class="item">
-        <fa-icon [icon]="faAt"></fa-icon>
-        <span class="author">Sitdown.liu</span>
-      </div>
-      <div class="item">
-        <span class="name">
-          <fa-icon [icon]="faQq"></fa-icon>
-          QQ群：
-        </span>
-        <span class="text">219839971</span>
-      </div>
-      <div class="item">
-        <span class="name">
-          <fa-icon [icon]="faEnvelope"></fa-icon>
-          Email：
-        </span>
-        <span class="text">sitdown.liu@gmail.com</span>
-      </div>
+      <app-ne-footer></app-ne-footer>
     </d-footer>
   </d-layout>
 </d-layout>
