v20221108 -Setting: 主题设置: 联动

--- a/src/render/app/pages/setting-win/setting-win.component.html
+++ b/src/render/app/pages/setting-win/setting-win.component.html
@@ -13,7 +13,10 @@
     </div>
   </d-aside>
   <d-layout>
-    <d-content class="layout-wrapper-content"> content </d-content>
+    <d-content class="layout-wrapper-content">
+      <!-- 主题设置 -->
+      <app-setting-theme></app-setting-theme>
+    </d-content>
     <d-footer>
       <app-ne-footer></app-ne-footer>
     </d-footer>
