--- a/src/render/components/ne-header/ne-tools-user/ne-tools-user.component.html
+++ b/src/render/components/ne-header/ne-tools-user/ne-tools-user.component.html
@@ -6,9 +6,9 @@
       <d-icon [icon]="'icon-member'"></d-icon>
       <span class="text">重新登录</span>
     </li>
-    <li role="menuitem" class="item" dDropDownMenuItem (click)="rePassword()">
+    <li role="menuitem" class="item" dDropDownMenuItem (click)="account()">
       <d-icon [icon]="'icon-lock-private'"></d-icon>
-      <span class="text">修改密码</span>
+      <span class="text">账户设置</span>
     </li>
     <li role="menuitem" class="item" dDropDownMenuItem (click)="quitIndexWin()">
       <d-icon [icon]="'icon-remove'"></d-icon>
