--- a/src/render/app/pages/setting-win/setting-win.component.scss
+++ b/src/render/app/pages/setting-win/setting-win.component.scss
@@ -11,8 +11,9 @@
   }
 
   .layout-wrapper-content {
-    height: calc(100vh - 80px);
+    height: calc(100vh - 36px);
     overflow: auto;
+    padding: 30px;
   }
 }
 
@@ -32,6 +33,7 @@ d-aside {
       cursor: pointer;
       display: flex;
       align-items: center;
+      font-size: 13px;
 
       &.actived {
         background-color: $devui-base-bg;
