--- a/src/render/components/ne-header/ne-tools-setting/ne-tools-setting.component.html
+++ b/src/render/components/ne-header/ne-tools-setting/ne-tools-setting.component.html
@@ -1,3 +1,3 @@
 <div class="ne-tools-setting">
-  <d-icon [icon]="'icon-setting'" [operable]="true"></d-icon>
+  <d-icon [icon]="'icon-setting'" [operable]="true" (click)="open()"></d-icon>
 </div>
